--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,9 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-
+    profile.folder: '%kernel.project_dir%/public/images/profile/'
+    profile.public.path : '/images/profile/'
+    default.profile.avatar: '/images/profile/default_avatar.png'
 services:
     # default configuration for services in *this* file
     _defaults:
@@ -22,3 +24,10 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    
+    # Configuration des arguments a passer dans le constructeur du service FileUploader
+    App\Service\FileUploader:
+        arguments:
+            $profileAvatarFolder: '%profile.folder%'
+            $profileAvatarPublicPath: '%profile.public.path%'
+            $defaultProfileAvatar: '%default.profile.avatar%'
